# langchain-learn

./: README.md  pyproject.toml
01.phrase01/: .env.example  README.md  main.py  pyproject.toml  run_benchmark.py  scaffold.py  test_mock_run.py
01.phrase01/benchmark_results/: benchmark_3b001aaa_2026-03-25.json  benchmark_525cbfce_2026-03-25.json  benchmark_9b06d3d4_2026-03-25.json
01.phrase01/src/lang_series_project/agents/: graph.py  llm.py  nodes.py  tools.py
01.phrase01/src/lang_series_project/api/: dependencies.py
01.phrase01/src/lang_series_project/api/routes/: chat.py
01.phrase01/src/lang_series_project/benchmark/: __init__.py  client.py  config.py  error_tests.py  errors.py  models.py  runner.py
01.phrase01/src/lang_series_project/core/: config.py  exceptions.py
01.phrase01/src/lang_series_project/models/: schemas.py
01.phrase01/tests/: chat_model_test.py  test_benchmark.py
01.phrase01/tests/test_async/: async_test.py  async_test_httpx.py
01.phrase01/tests/test_pydantic/: pydantic_domian_test.py
02.phrase02/: .env.example  README.md  main.py  pyproject.toml
02.phrase02/logs/: router_calls.jsonl
02.phrase02/router_qa/: logger.py  models.py  parsers.py  registry.py  router.py  system.py
03.phrase03/: .env.example  README.md  config.py  main.py  pyproject.toml
03.phrase03/chroma_db/: chroma.sqlite3
03.phrase03/dummy/: chroma.sqlite3
03.phrase03/rag_system/: chains.py  formatter.py  indexer.py  memory.py  models.py  retriever.py  router.py
03.phrase03/tests/: test_indexer.py  test_integration.py  test_memory.py  test_retriever.py  test_router.py
04.phrase04/langgraph-linear-approval/: README.md  main.py  pyproject.toml
04.phrase04/langgraph-linear-approval/src/linear_approval/: graph.py  main.py  nodes.py  state.py
05.phrase05/: .env.example  README.md  main.py  pyproject.toml
05.phrase05/src/: config.py  graph.py  nodes.py  state.py
06.phrash06/multi_agent_report/: .env.example  README.md  main.py  pyproject.toml
06.phrash06/multi_agent_report/src/: config.py  graph.py  reporter.py  state.py  supervisor.py  workers.py
07.phrase07/: .env.example  README.md  infrastructure.py  llm_wrapper.py  main.py  pyproject.toml
07.phrase07/tests/: test_resilience.py
